# backharddi-ng-kernel

./: .gitignore  .project  Makefile  config  modules-list  modules-list.karmic  pkg-list  updateversioninlogo.py
debian/: changelog  control  install
debian.d-i/: changelog  control  rules
tests/: Makefile  pt1
tests/rfbplaymacro-0.2.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  rfbplaymacro.spec  rfbplaymacro.spec.in  test.rfm
tests/rfbplaymacro-0.2.2/include/: config.h.in
tests/rfbplaymacro-0.2.2/src/: rfbplaymacro.c
tests/test001/: checks  fbs  list.orig  (+4 more)
udebs/: Makefile  README
udebs/addons/lzop/source/: Makefile.am  README  THANKS  aclocal.m4  configure  configure.ac
udebs/addons/lzop/source/B/: 00README.TXT  unset.bat
udebs/addons/lzop/source/B/dos16/: bc.bat  mc.bat  vc.bat  wc.bat
udebs/addons/lzop/source/B/dos32/: dj2.bat  wc_d.bat
udebs/addons/lzop/source/B/os2/: emx.cmd
udebs/addons/lzop/source/B/win16/: bc.bat  wc.bat
udebs/addons/lzop/source/B/win32/: bc.bat  cygwin.bat  dm.rsp  vc.bat
udebs/addons/lzop/source/debian/: control  rules  watch
udebs/addons/lzop/source/doc/: Makefile.in  lzop.1  lzop.man  lzop.pod  lzop.tex
udebs/addons/lzop/source/src/: acc.h  acc_auto.h  acc_lib.ch  acc_lib.h  c_ansic.c  c_init.c  c_none.c  compress.c  conf.h  filter.c  frames.c  help.c  mblock.c  mygetopt.c  mygetopt.h  s_curses.c  s_djgpp2.c  util.c  version.h
udebs/addons/lzop/src/: Makefile.am  Makefile.in  c_ansim.c  c_screen.c  console.h  djgpp2.c  frames.h  lzop.c  p_lzo.c  s_object.c  s_vcsa.c  screen.h
udebs/addons/partimage/source/: BOOT-ROOT-creation.txt  ChangeLog  FUTURE  Makefile.am  PACKAGES  README  ROADMAP  THANKS  aclocal.m4  configure  configure.ac
udebs/addons/partimage/source/debian/: changelog  control  copyright  partimage-certs.cnf  partimage-server.dirs  partimage-server.docs  partimage-server.install  partimage-server.partimaged.default  partimage-server.partimaged.pam  partimage-server.postinst  partimage.dirs  partimaged-passwd  partimagedusers  rules
udebs/addons/partimage/source/debian/man/: partimage.1  partimagedusers.5
udebs/addons/partimage/source/patches/: error_less.diff  fully-batch-mode.patch
udebs/addons/partimage/source/po/: .pot  Makefile.in.in  POTFILES.in  da.gmo  de.po  es.po  fi.po  fr.po  nl.gmo  nl.po  pl.po  sk.gmo  sk.po
udebs/addons/partimage/source/src/: Makefile.in
udebs/addons/partimage/source/src/client/: buffer.cpp  cbitmap.h  image_base.h  imagefile.h  interface_none.h  netclient.cpp  netclient.h  partimage.h
udebs/addons/partimage/source/src/client/fs/: .cvsignore  fs_afs.cpp  fs_afs.h  fs_base.cpp  fs_ext2.h  fs_fat.cpp  fs_fat.h  fs_hfs.h  fs_hpfs.cpp  fs_hpfs.h  fs_ntfs.cpp  fs_xfs.h
udebs/addons/partimage/source/src/server/: Makefile.am  netserver.h  partimaged-client.h  partimaged-gui_dummy.h  partimaged-gui_newt.cpp  partimaged-gui_newt.h  partimaged-main.cpp
udebs/addons/partimage/source/src/shared/: Makefile.am  Makefile.in  exceptions.cpp  image_disk.h  messages.cpp  pathnames.h.in  privs.cpp  privs.h  structures.h
udebs/addons/partimage/source/tools/zerox/: zerox.cpp
udebs/d-i/cdebconf/: Makefile  configure  configure.ac
udebs/d-i/cdebconf/debian/: cdebconf-newt-udeb.templates  cdebconf-priority.postinst  cdebconf.install  changelog  copyright  rules
udebs/d-i/cdebconf/debian/po/: am.po  be.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  et.po  gu.po  he.po  id.po  ja.po  ko.po  ku.po  lt.po  lv.po  mk.po  ml.po  nn.po  pa.po  pt.po  pt_BR.po  ro.po  sk.po  sv.po  ta.po  templates.pot  th.po  tl.po  uk.po  vi.po  wo.po  zh_TW.po
udebs/d-i/cdebconf/doc/: modules.txt
udebs/d-i/cdebconf/source/: globalmakeflags.in
udebs/d-i/cdebconf/source/debian/: cdebconf-gtk-udeb.templates  cdebconf-text-udeb.templates  cdebconf-udeb.install  cdebconf.dirs  control
udebs/d-i/cdebconf/source/debian/po/: POTFILES.in  ar.po  bg.po  bn.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  it.po  ka.po  km.po  nb.po  ne.po  nl.po  pl.po  ru.po  sl.po  sq.po  tr.po  zh_CN.po
udebs/d-i/cdebconf/source/doc/: coding.txt  confmodule.txt  design.txt
udebs/d-i/cdebconf/source/src/: cdebconf.conf-dist.in  commands.c  commands.h  configuration.c  confmodule.h  constants.h  database.c  debconf-copydb.c  debconf-loadtemplate.c  debconfclient.c  frontend.h  question.c  template.c
udebs/d-i/cdebconf/source/src/modules/db/mysql/: Makefile  create.sql  mysql.c
udebs/d-i/cdebconf/source/src/modules/db/rfc822db/: rfc822db.c
udebs/d-i/cdebconf/source/src/modules/db/stack/: stack.c
udebs/d-i/cdebconf/source/src/modules/frontend/bogl/: Makefile
udebs/d-i/cdebconf/source/src/modules/frontend/corba/: Makefile  corba.c  dcf-text.c  dcf.idl
udebs/d-i/cdebconf/source/src/modules/frontend/gtk/: cdebconf_gtk.h  choice_model.h  descriptions.h  di.c  fe_data.h  go.h  screenshot.h  select_handlers.c  ui.h
udebs/d-i/cdebconf/source/src/modules/frontend/newt/: Makefile  cdebconf_newt.h  newt.c
udebs/d-i/cdebconf/src/: Makefile.in  confmodule.c  database.h  debconf-communicate.c  debconf-dumpdb.c  debconf.c  debconfclient.h  dpkg-reconfigure.c  frontend.c  question.h  strutl.c  strutl.h  template.h
udebs/d-i/cdebconf/src/modules/db/: modules.mak
udebs/d-i/cdebconf/src/modules/db/rfc822db/: Makefile
udebs/d-i/cdebconf/src/modules/db/textdb/: textdb.c
udebs/d-i/cdebconf/src/modules/frontend/: modules.mak
udebs/d-i/cdebconf/src/modules/frontend/bogl/: bogl.c
udebs/d-i/cdebconf/src/modules/frontend/corba/: dcf-textimpl.c
udebs/d-i/cdebconf/src/modules/frontend/gtk/: Makefile  cdebconf_gtk.c  choice_model.c  descriptions.c  di.h  go.c  handlers.c  handlers.h  linker-script  progress.c  progress.h  screenshot.c  select_handlers.h  ui.c
udebs/d-i/cdebconf/src/modules/frontend/ncurses/: Makefile  ncurses.c
udebs/d-i/cdebconf/src/modules/frontend/slang/: Makefile  slang.c
udebs/d-i/cdebconf/src/modules/frontend/text/: Makefile  text.c
udebs/d-i/cdebconf/src/test/: Makefile  help.templates  test.config
(+1743 files in other folders)
