## Process this file with automake to produce Makefile.in
#
# Copyright (C) 1996-2003 Markus F.X.J. Oberhumer
#

AUTOMAKE_OPTIONS = 1.7.4

bin_PROGRAMS = lzop

EXTRA_DIST = \
    ACC_LICENSE \
    acc.h acc_arch.h acc_auto.h acc_cc.h acc_defs.h acc_incd.h acc_ince.h acc_inci.h acc_init.h acc_lib.ch acc_lib.h acc_mm.h acc_os.h acc_type.h

lzop_SOURCES = \
    lzop.c compress.c filter.c help.c mblock.c p_lzo.c util.c \
    c_init.c c_none.c c_ansim.c c_ansic.c c_screen.c \
    s_object.c s_curses.c s_djgpp2.c s_vcsa.c \
    frames.c djgpp2.c \
    version.h conf.h console.h frames.h screen.h \
    mygetopt.c mygetopt.h

